# TCKDB

./: .buildinfo  .coveragerc  .dockerignore  .env.db-admin.example  .env.example  .env.pi.example  .env.selfhosted.example  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTEXT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  codecov.yml  contribute.html  credits.html  current_project_status.md  docker-compose.local.yml  docker-compose.pi.yml  docker-compose.yml  entrypoint.sh  environment.yml  genindex.html  index.html  licence.html  mkdocs.yml  objects.inv  plan.md  py-modindex.html  release.html  requirements.txt  schema_spec.md  search.html  searchindex.js
backend/: .env.example  .env.local.example  Dockerfile  cookies.txt  environment.yml  main.py  pyproject.toml  schema.dbml  schema_spec.md
backend/alembic/: env.py
backend/alembic/versions/: 4869f598737d_align_molecular_property_observation_to_.py  5eaf03c94f9b_add_calc_hessian_table_and_hessian_.py  60b67e360daf_enable_rdkit_extension.py  6a9d2e4c7b1f_add_repro_assessment_public_ref.py  94daa2c345fb_add_species_formula_expression_index.py  a1b2c3d4e5f6_add_molecular_property_observation.py  a3f1c7e9b2d5_kinetics_is_third_body.py  a5c8e2f4b6d1_add_thermo_nasa9_wilhoit_model_kind.py  a7b8c9d0e1f2_add_llm_precheck_recorded_audit_event.py  a7c1e9d2f4b8_species_identity_canonical_smiles.py  a7c9e2f4b6d8_enforce_artifact_integrity_metadata.py  b2c3d4e5f6a7_mpo_timestamps_server_default.py  b38b43af6460_add_calc_spin_diagnostic.py  b3e7d1f9a2c4_kinetics_mechanism_roundtrip.py  b4e8c1f6a2d9_add_reproducibility_assessments.py  b7e2d4f6a8c1_add_transition_state_selection.py  b8c9d0e1f2a3_add_machine_review_curator_task.py  b8d2f0a3c6e1_kinetics_tunneling_enum_pressure_context.py  b8e3f1a9c2d4_seed_f12_ansatz_parameter_vocab.py  c3d4e5f6a7b8_add_calculation_fk_indexes.py  c4a7e2f1b8d9_thermo_reference_state_semantics.py  c6f2a9d4e7b1_enforce_accepted_science_immutability.py  c9d0e1f2a3b4_add_record_machine_review.py  c9e3a1b5d7f2_kinetics_falloff_and_third_body.py  d0e1f2a3b4c5_add_submission_kind_computed_species_statmech.py  d0f4b2c6e8a3_statmech_optical_isomers_electronic_levels.py  d3f5b7a9c1e2_add_group_additivity_provenance.py  d4e5f6a7b8c9_add_species_entry_mol_gist_index.py  d861dfd60891_create_intial_schema.py  d9c4a1e7f2b6_rename_transition_state_selection_fk.py  e1a5c3f7b9d4_level_of_theory_spin_treatment.py  e1f2a3b4c5d6_add_submission_failed_status_and_artifact_record_type.py  e5f6a7b8c9d0_add_literature_and_workflow_fk_indexes.py  e7a3c9f1b5d2_add_statmech_rotational_constants.py  e9a3c5f7b1d2_add_insufficient_reproducibility_grade.py  f2a4c6e8b0d1_add_kinetics_degeneracy_convention.py  f2b6d4a8c0e5_kinetics_standalone_plog_chebyshev.py  f3a9c1d7b2e4_calculation_software_reconciliation.py  f4a7c2e9b1d3_rename_remaining_over63_fks.py  f4c8b2a6e9d1_add_record_review_event_history.py  (+1 more)
backend/app/api/: README.md  __init__.py  app.py  client_version.py  config.py  deps.py  error_contract.py  errors.py  idempotency.py  logging_config.py  public_openapi.py  rate_limit.py  request_id.py  router.py  startup_checks.py
backend/app/chemistry/: __init__.py  geometry.py  species.py  torsion_fingerprint.py  units.py
backend/app/db/: __init__.py  base.py  types.py
backend/app/schemas/: README.md  common.py  contribution_bundle_dry_run.py  jobs.py  reaction_family.py  upload_warning.py  utils.py
backend/app/services/: README.md  accepted_science.py  artifact_persistence.py  artifact_storage.py  auth.py  calculation_parameter_extraction.py  calculation_resolution.py  calculation_scan_resolution.py  cccbdb_molecular_property_import.py  conformer_resolution.py  contribution_bundle_dry_run.py  contribution_bundle_export.py  energy_correction_resolution.py  ess_result.py  ess_software_detection.py  ess_species_deduction.py  gaussian_output_parser.py  gaussian_parameter_parser.py  geometry_resolution.py  geometry_validation.py  group_additivity_resolution.py  hessian_extraction.py  hessian_parsing.py  idempotency.py  kinetics_resolution.py  literature_metadata.py  literature_resolution.py  molpro_parameter_parser.py  network_resolution.py  orca_parameter_parser.py  provenance_warnings.py  public_refs.py  reaction_resolution.py  record_review.py  reproducibility_assessment.py  reproducibility_rubric.py  scientific_record_supersession.py  selection.py  software_reconciliation.py  software_resolution.py  (+10 more)
backend/app/workers/: upload_worker.py
backend/app/workflows/: README.md  __init__.py  computed_reaction.py  computed_species.py  conformer.py  contribution_bundle_submit.py  kinetics.py  network.py  network_pdep.py  reaction.py  statmech.py  thermo.py  transition_state.py  transport.py
backend/docs/: testing.md
backend/docs/deployment/: database_roles.md  migrations.md
backend/docs/specs/: accepted_science_immutability.md  admin_machine_review_curator_task_api.md  admin_machine_review_inspection.md  ai_review_assistant_admin_consumption.md  automated_trust_layer.md  backend_deployment_readiness_audit.md  cccbdb_importer.md  ingestion_submission_model.md  machine_consumer_query_contract.md  machine_review_admin_ui_mock.md  machine_review_curator_task_queue.md  (+28 more)
backend/scripts/: bootstrap_admin.py  bulk_load_arc.py  bulk_load_reactions.py  cccbdb_form_payload_dryrun.py  cccbdb_generate_form_queue.py  cccbdb_import_molecular_property_payloads.py  cccbdb_import_saved_species_page.py  cccbdb_property_payload_dryrun.py  cccbdb_resolve_form_page.py  cccbdb_resolver_diagnostics.py  cccbdb_snapshot.py  check_selfhosted_deployment.sh  configure_database_roles.py  dev_login.sh  export_contribution_bundle.py  extract_calculation_parameters.py  generate_dbml.py  prototype_import_reaction_bundle.py  seed_scientific_demo_data.py  tckdb_archive.py  tckdb_auth.sh  tckdb_doctor.sh  test-api.sh  test-fast.sh  test-full.sh  test-profile.sh  test-scientific.sh  update-openapi-golden.sh
backend/tests/: conftest.py  test_db_name_resolution.py
clients/python/: README.md  pyproject.toml
integrations/mcp/: README.md  pyproject.toml
(+1469 files in other folders)
