# TCKDB backend package metadata.
#
# This file is the **pip-installable** definition of the backend.
# It coexists with `backend/environment.yml`:
#
#   - environment.yml is the conda/mamba recipe (system-level toolchain
#     plus RDKit from conda-forge). It remains the recommended path
#     for developers who want the conda-forge RDKit build.
#   - pyproject.toml is the source of truth for the Python package
#     itself (`tckdb-backend`), the runtime dependency *list*, dev/test
#     extras, and the optional RDKit extra. It is what an eventual API
#     Dockerfile will build off.
#
# Two supported developer setups:
#
#   Conda + pip (recommended when RDKit-cartridge parity matters):
#     mamba env create -n tckdb_env -f backend/environment.yml
#     cd backend && pip install -e ".[dev]"
#     # RDKit comes from conda; skip the [rdkit] extra here.
#
#   Pure pip / uv (lockfile-driven, container-friendly):
#     cd backend
#     uv sync --extra dev --extra rdkit
#     # or: pip install -e ".[dev,rdkit]"
#
# See docs/deployment/api_containerization_notes.md for the full
# discussion.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tckdb-backend"
version = "0.1.0"
description = "FastAPI backend for the TCKDB scientific database (thermochemistry / kinetics with provenance)."
requires-python = ">=3.13"
license = { text = "TBD — see repository root" }
keywords = [
    "tckdb",
    "thermochemistry",
    "kinetics",
    "computational-chemistry",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Database",
]

# Runtime dependencies. Lower bounds are tracked at major-feature
# breaks: SQLAlchemy 2.x for `Mapped[...]`, Pydantic 2.x for the
# settings/typing model the codebase already uses, psycopg 3.x for the
# modern driver. RDKit is NOT here — see the [rdkit] extra below.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "boto3>=1.34",
    "requests>=2.31",
    "PyYAML>=6.0",
    "numpy>=1.26",
    # Drop-in replacement for the abandoned `isbnlib`; the runtime
    # import path remains `import isbnlib` — see
    # app/services/literature_metadata.py.
    "isbnlib2>=0.1",
]

[project.optional-dependencies]
# Test + lint tooling. Kept minimal: only what the test suite actually
# imports (pytest, httpx for the FastAPI TestClient transport) plus
# pytest-cov, which the pytest output already reports as a loaded
# plugin in the conda env, and ruff as the modern default linter.
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
# RDKit is intentionally optional and split out:
#   - Conda/mamba developers get the conda-forge build via
#     environment.yml — they do NOT need to install this extra.
#   - Pure-pip users (and the future API container, if it builds off
#     pyproject rather than environment.yml) opt in with `[rdkit]`.
# Keeping RDKit out of the base runtime list means the lockfile
# resolves on any platform; the heavy chemistry dep is a deliberate
# choice, not an accidental transitive.
rdkit = [
    "rdkit>=2024.3",
]

# `tckdb-backend` is installed as `pip install -e .` from backend/.
# The package itself is `app/`. `main.py` is the Uvicorn ASGI shim
# referenced by `uvicorn main:app` and is exposed as a top-level module
# so it imports cleanly inside an editable install.
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "scripts*"]

# pytest configuration. Mirrors backend/pytest.ini for projects that
# read pyproject; pytest.ini still wins where both exist, so the two
# stay in sync deliberately.
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Ruff configuration. Enforced in CI (see .github/workflows/backend-ci.yml).
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# E/F/W/I: pycodestyle, pyflakes, import sorting.
# B: bugbear correctness checks. C4: comprehension hygiene.
# RUF: ruff-native checks (unused noqa, __all__ sorting, mutable defaults).
# Deliberately NOT enabled (mechanical churn, low bug-value for this repo,
# adopt only as dedicated churn-only changes if ever): SIM (style
# simplifications), PTH (os.path -> pathlib), UP (pyupgrade rewrites).
select = ["E", "F", "W", "I", "B", "C4", "RUF"]
ignore = [
    "E501",   # line-length handled by formatter, not lint
    "B008",   # function call in default arg — FastAPI Depends() idiom
    "RUF002", # ambiguous unicode in docstrings — scientific notation (Å, ², ⟨S²⟩)
    "RUF003", # ambiguous unicode in comments — same reason
    "RUF012", # mutable class default — Pydantic v2 copies defaults per-instance, so `= []` is safe on models
]

[tool.ruff.lint.per-file-ignores]
# Pytest idioms that are noise in test code but kept strict in app code:
# RUF059 (unused unpacked variable — `obj, _resp = make_x(...)` helpers),
# RUF043 (unescaped regex in pytest.raises(match=...) — deliberately loose
#   substring matches, not anchored regexes),
# B017 (pytest.raises(Exception) on DB-rejection tests — narrowing to the
#   driver's exception type would couple tests to psycopg internals),
# E402 (imports placed near their point of use to keep a test file
#   self-contained — a readability choice authors made deliberately).
"tests/**" = ["RUF059", "RUF043", "B017", "E402"]
# conftest imports fixtures by name so sibling test modules can request
# them; those imports look "unused" to F401 but are the sharing mechanism.
"tests/**/conftest.py" = ["RUF059", "RUF043", "F401"]

# Re-export hubs: modules that import composed schema/service symbols
# purely to re-expose them for downstream `from <hub> import X`. The
# codebase uses implicit re-exports (no __all__), so F401 flags these as
# unused even though removing them breaks importers (verified: F401
# --fix here strips `SchemaBase` and breaks the app). Converting these
# to explicit `__all__` / `import X as X` re-exports and re-enabling
# F401 is tracked follow-up work (plan.md, Phase 1 notes). F401 stays
# active everywhere else.
"app/schemas/common.py" = ["F401"]
"app/schemas/utils.py" = ["F401"]
"app/schemas/reaction_family.py" = ["F401"]
"app/schemas/upload_warning.py" = ["F401"]
"app/schemas/entities/calculation.py" = ["F401"]
"app/schemas/entities/species_entry.py" = ["F401"]
"app/schemas/fragments/artifact.py" = ["F401"]
"app/schemas/fragments/calculation.py" = ["F401"]
"app/schemas/fragments/geometry.py" = ["F401"]
"app/schemas/fragments/identity.py" = ["F401"]
"app/schemas/fragments/refs.py" = ["F401"]
"app/schemas/workflows/computed_reaction_upload.py" = ["F401"]
"app/schemas/workflows/computed_species_upload.py" = ["F401"]
"app/schemas/workflows/energy_correction_upload.py" = ["F401"]
"app/schemas/workflows/literature_upload.py" = ["F401"]
"app/schemas/workflows/network_pdep_upload.py" = ["F401"]
"app/services/calculation_resolution.py" = ["F401"]
"app/services/energy_correction_resolution.py" = ["F401"]
"app/services/kinetics_resolution.py" = ["F401"]
"app/services/literature_resolution.py" = ["F401"]
"app/workflows/transport.py" = ["F401"]

# mypy configuration. Scoped adoption: strict-ish on the layers with the
# highest annotation quality (models, schemas, chemistry); widen the
# `files` list per-package as layers are brought up to standard.
[tool.mypy]
python_version = "3.13"
files = ["app/db", "app/schemas", "app/chemistry"]
follow_imports = "silent"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true

# Some rdkit-stubs releases ship a syntactically-broken .pyi
# (rdchem.pyi: "parameter without a default follows parameter with a default"),
# which makes mypy fail at parse time. Skip following rdkit imports and its
# stubs so mypy treats rdkit as Any instead of parsing the broken stub.
[[tool.mypy.overrides]]
module = "rdkit.*"
follow_imports = "skip"
follow_imports_for_stubs = true
