[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tckdb-client"
version = "0.17.0"
description = "Generic synchronous Python HTTP client for the TCKDB API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TCKDB" }]
keywords = ["tckdb", "thermochemistry", "kinetics", "client", "http"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
tckdb-replay = "tckdb_client.cli:main"

[project.urls]
Homepage = "https://github.com/calvinp0/tckdbv2"
Repository = "https://github.com/calvinp0/tckdbv2"
Issues = "https://github.com/calvinp0/tckdbv2/issues"
Documentation = "https://github.com/calvinp0/tckdbv2/tree/main/clients/python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tckdb_client = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
