[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tckdb-client"
version = "0.28.4"
description = "Synchronous Python HTTP client and scientific upload builders for the TCKDB API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "TCKDB" }]
keywords = [
    "tckdb",
    "thermochemistry",
    "kinetics",
    "transport",
    "statmech",
    "client",
    "http",
    "computational chemistry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    # License is expressed via the ``license`` table above; the
    # ``License :: OSI Approved :: MIT License`` classifier is
    # deprecated in PEP 639 / setuptools 77+ and is intentionally not
    # listed here.
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]
# Optional: pull in the Jupyter stack used to author + execute
# ``examples/builder_computed_reaction_demo.ipynb``. The executable
# smoke test ``test_builder_computed_reaction_demo_notebook.py``
# auto-skips when these aren't installed, so the base ``test`` extra
# stays slim for CI environments that don't care about the notebook.
notebook = [
    "jupyter>=1.0",
    "nbformat>=5.10",
    "nbconvert>=7.16",
    "ipykernel>=6",
]

[project.scripts]
tckdb-replay = "tckdb_client.cli:main"

[project.urls]
Homepage = "https://github.com/calvinp0/tckdbv2"
Repository = "https://github.com/calvinp0/tckdbv2"
Issues = "https://github.com/calvinp0/tckdbv2/issues"
Documentation = "https://github.com/calvinp0/tckdbv2/tree/main/clients/python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tckdb_client = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
