[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tckdb-mcp"
version = "0.1.0"
description = "Read-only MCP server wrapping the TCKDB scientific API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TCKDB" }]
keywords = ["tckdb", "mcp", "chemistry", "kinetics", "thermo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
tckdb-mcp = "tckdb_mcp.server:main"

[project.urls]
Homepage = "https://github.com/tckdb"
Specification = "https://github.com/tckdb/tckdb_v2/blob/main/docs/specs/mcp_readonly_integration.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tckdb_mcp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
